--- a/package.json
+++ b/package.json
@@ -9,18 +9,20 @@
     "lint": "expo lint"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo-google-fonts/playfair-display": "^0.2.3",
+    "@expo/vector-icons": "^14.0.2",
     "@lucide/lab": "^0.1.2",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.39.3",
     "date-fns": "^3.3.1",
     "expo": "52.0.33",
+    "expo-auth-session": "^6.0.3",
     "expo-blur": "^14.0.3",
     "expo-constants": "^17.0.5",
+    "expo-crypto": "^14.0.2",
     "expo-font": "^13.0.3",
     "expo-linear-gradient": "^14.0.2",
     "expo-linking": "^7.0.5",
